--- a/frontEnd/src/app/components/orden-trabajo/orden-trabajo.component.html
+++ b/frontEnd/src/app/components/orden-trabajo/orden-trabajo.component.html
@@ -1,32 +1,31 @@
 <head>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=logout" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&display=swap" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=logout" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&display=swap" />
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfobject/2.2.6/pdfobject.min.js"></script>
-  </head>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfobject/2.2.6/pdfobject.min.js"></script>
+</head>
+
 <body>
-<div class="container">
+  <div class="container">
     <nav class="sidebar">
       <ul class="ULestilo">
-        <li class="FlexLista" > <a href="/ot"><img class="imgIcono" src="https://www.utn.edu.ar/images/logo-utn.png" alt=""></a></li>
+        <li class="FlexLista"> <a href="/ot"><img class="imgIcono"
+              src="https://frsc.cvg.utn.edu.ar/theme/image.php/snap/theme/1741635814/img/logo" alt=""></a></li>
 
         <li class="FlexLista dropdown">
-          <a href="/ot" class="txtNav txtNavOt dropbtn">Orden de trabajo</a>
+          <a href="/ot" class="txtNav txtNavOt dropbtn">Orden de Trabajo</a>
         </li>
-        
+
         <li class="FlexLista">
-          <a  class="txtNav " href="/historial">
+          <a class="txtNav " href="/historial">
             Historial
           </a>
         </li>
         <li class="FlexLista">
-          <a  class="txtNav " href="/ot">
-            Gestion
-          </a>
-        </li>
-        <li class="FlexLista">
-          <a  class="txtNav txtSalir" href="/ot" (click)="logout()" >
-            Cerrar sesion
+          <a class="txtNav txtSalir" href="/ot" (click)="logout()">
+            Cerrar sesión
           </a>
         </li>
       </ul>
@@ -34,111 +33,97 @@
 
 
     <main class="content">
-     
-        <div class="form-container">
-          <div class="form-group">
-              <select class="selectOptions" [(ngModel)]="selectedEdificio">
-                <option value="" disabled selected hidden>EDIFICIO</option>
-                <option  *ngFor="let edificio of datosEdificio" [ngValue]="edificio.nombre">{{ edificio.nombre }}</option>
-              </select>  
-              
-          </div>
-  
-          <div class="form-group">
-              <select class="selectOptions" [(ngModel)]="selectedPiso">
-                  <option value="" disabled>PISO</option>
-                  <option *ngFor="let piso of datosPiso" [ngValue]="piso.nombre">{{ piso.nombre }}</option>
-                  
-              </select>
-              
-          </div>
-  
-          <div class="form-group">
-              <select class="selectOptions" [(ngModel)]="selectedSector">
-                  <option value="" disabled>SECTOR</option>
-                  <option *ngFor="let sector of datosSector" [ngValue]="sector.nombre">{{ sector.nombre }} </option> 
-              </select>
-              
-          </div>
-  
-          <div class="form-group">
-              <select class="selectOptions" [(ngModel)]="selectedUbicacion">
-                  <option value="" disabled>UBICACION</option>
-                  <option *ngFor="let ubicacion of datosUbicacion" [ngValue]="ubicacion.nombre">{{ ubicacion.nombre }}</option>
-                  
-              </select>
-              
-          </div>
-  
-          <div class="form-group">
-              <select class="selectOptions" [(ngModel)]="selectedTipoActivo">
-                  <option value="" disabled>ACTIVO</option>
-                  <option *ngFor="let activo of datosActivo" [ngValue]="activo.nombre">{{ activo.nombre }}</option>
-    
-              </select>
-              
-          </div>
-  
-          <div class="form-group">
-                <select class="selectOptions" [(ngModel)]="selectedUsuario">
-                  <option value="" disabled>OPERARIO</option>
-                  <option *ngFor="let usuario of datosUsuario" [ngValue]="usuario.nombre">{{ usuario.nombre }}</option>
-              </select>
-              
-          </div>
-  
-          <div class="form-group">
-            <select multiple type class="selectOptions opcionMultiple" [(ngModel)]="selectedTareas">
-              <option value="" disabled>TAREAS</option>
-              <option *ngFor="let tarea of datosTareas" [ngValue]="tarea.descripcion">{{ tarea.descripcion }}</option>
-              </select>
-           
-          </div>
-  
-          <div class="form-group formBottom">      
-              <input class="inputFormOT inputDate" #fechaInput type="date" placeholder="Ingrese información">
-          </div>
+
+      <div class="form-container">
+        <div class="form-group">
+          <select class="selectOptions" [(ngModel)]="selectedEdificio">
+            <option value="" disabled selected hidden>EDIFICIO</option>
+            <option *ngFor="let edificio of datosEdificio" [ngValue]="edificio.nombre">{{ edificio.nombre }}</option>
+          </select>
+
+        </div>
+
+        <div class="form-group">
+          <select class="selectOptions" [(ngModel)]="selectedPiso">
+            <option value="" disabled>PISO</option>
+            <option *ngFor="let piso of datosPiso" [ngValue]="piso.nombre">{{ piso.nombre }}</option>
+
+          </select>
+
+        </div>
+
+        <div class="form-group">
+          <select class="selectOptions" [(ngModel)]="selectedSector">
+            <option value="" disabled>SECTOR</option>
+            <option *ngFor="let sector of datosSector" [ngValue]="sector.nombre">{{ sector.nombre }} </option>
+          </select>
+
+        </div>
+
+        <div class="form-group">
+          <select class="selectOptions" [(ngModel)]="selectedUbicacion">
+            <option value="" disabled>UBICACION</option>
+            <option *ngFor="let ubicacion of datosUbicacion" [ngValue]="ubicacion.nombre">{{ ubicacion.nombre }}
+            </option>
+
+          </select>
+
+        </div>
+
+        <div class="form-group">
+          <select class="selectOptions" [(ngModel)]="selectedTipoActivo">
+            <option value="" disabled>ACTIVO</option>
+            <option *ngFor="let activo of datosActivo" [ngValue]="activo.nombre">{{ activo.nombre }}</option>
+
+          </select>
+
+        </div>
+
+        <div class="form-group">
+          <select class="selectOptions" [(ngModel)]="selectedUsuario">
+            <option value="" disabled>OPERARIO</option>
+            <option *ngFor="let usuario of datosUsuario" [ngValue]="usuario.nombre">{{ usuario.nombre }}</option>
+          </select>
+
+        </div>
+
+        <div class="form-group">
+          <select multiple type class="selectOptions opcionMultiple" [(ngModel)]="selectedTareas">
+            <option value="" disabled>TAREAS</option>
+            <option *ngFor="let tarea of datosTareas" [ngValue]="tarea.descripcion">{{ tarea.descripcion }}</option>
+          </select>
+
+        </div>
+
+        <div class="form-group formBottom">
+          <input class="inputFormOT inputDate" #fechaInput type="date" placeholder="Ingrese información">
+        </div>
 
 
-          <div class="form-buttons">
-            <button type="submit" class="btn-submit" (click)="validarYGuardar()">Crear</button>
-          </div>
-          <div class="form-buttons">
-            <button class="btn-submit" (click)="generatePDF()">Generar PDF</button>
-          </div>
-          <div class="notification" *ngIf="showNotification"
-          [ngClass]="{
+        <div class="form-buttons">
+          <button type="submit" class="btn-submit" (click)="validarYGuardar()">Crear</button>
+        </div>
+        <div class="form-buttons">
+          <button class="btn-submit" (click)="generatePDF()">Generar PDF</button>
+        </div>
+        <div class="notification" *ngIf="showNotification" [ngClass]="{
             'success': notificationType === 'success',
             'error': notificationType === 'error',
             'info': notificationType === 'info'
           }">
-       {{ notificationMessage }}
-         </div>
-
-         <div id="pdf-content" >
-          <h1 class="vistaPreviaLi">Orden de trabajo</h1>
-          <ul >
-            <li class="vistaPreviaLi liSubrayado">Vista Previa</li>
-            <li class="vistaPreviaLi" >Edificio:  <strong>{{ selectedEdificio}}</strong> </li>
-            <li class="vistaPreviaLi">Piso: <strong>{{ selectedPiso}} </strong> </li>
-            <li class="vistaPreviaLi">Sector:  <strong>{{ selectedSector}} </strong> </li>
-            <li class="vistaPreviaLi">Ubicacion: <strong> {{ selectedUbicacion}} </strong>  </li>
-            <li class="vistaPreviaLi">Activo: <strong> {{ selectedTipoActivo}}</strong> </li>
-            <li class="vistaPreviaLi">Operario: <strong>{{selectedUsuario}} </strong></li>
-            <li class="vistaPreviaLi tareasStrong">Tareas: <br> <strong > {{selectedTareas}} </strong> <br></li>
-            <li class="vistaPreviaLi" id="fechaSeleccionada"><strong>Fecha:    </strong><br></li>
-          </ul>
-         </div>
-
-         <iframe *ngIf="pdfUrl" [src]="pdfUrl" width="100%" height="600px"></iframe>
-
+          {{ notificationMessage }}
         </div>
 
-      </main>
-      </div>
-    </body>
-
-   
-      
-   
- 
+        <div id="pdf-content" class="vista-previa-box">
+          <h2 class="vista-previa-titulo">Orden de Trabajo</h2>
+          <div class="vista-previa-datos">
+            <p><span>Edificio:</span> {{ selectedEdificio }}</p>
+            <p><span>Piso:</span> {{ selectedPiso }}</p>
+            <p><span>Sector:</span> {{ selectedSector }}</p>
+            <p><span>Ubicación:</span> {{ selectedUbicacion }}</p>
+            <p><span>Activo:</span> {{ selectedTipoActivo }}</p>
+            <p><span>Operario:</span> {{ selectedUsuario }}</p>
+            <p><span>Tareas:</span> {{ selectedTareas }}</p>
+            <p><span>Fecha:</span> <span id="fechaSeleccionada"></span></p>
+          </div>
+        </div>
