feat: add management screen

--- a/frontEnd/src/app/components/entorno/entorno.component.html
+++ b/frontEnd/src/app/components/entorno/entorno.component.html
@@ -23,8 +23,8 @@
               Historial
             </a>
           </li>
-          <li class="FlexLista">
-            <a  class="txtNav " href="/ot">
+          <li class="FlexLista" *ngIf="isAdmin">
+            <a  class="txtNav " href="/gestion">
               Gestion
             </a>
           </li>
