Add management page and CRUD APIs

--- a/frontEnd/src/app/components/entorno/entorno.component.html
+++ b/frontEnd/src/app/components/entorno/entorno.component.html
@@ -24,7 +24,7 @@
             </a>
           </li>
           <li class="FlexLista">
-            <a  class="txtNav " href="/ot">
+            <a  class="txtNav " href="/gestion">
               Gestion
             </a>
           </li>
@@ -49,3 +49,4 @@
 
   
   </body>
+
