--- a/frontEnd/src/app/components/gestion/gestion.component.html
+++ b/frontEnd/src/app/components/gestion/gestion.component.html
@@ -1,28 +1,51 @@
-<div class="gestion-container">
-  <h2>Gestión</h2>
-  <div class="seccion" *ngFor="let item of [{name:'Edificios', data:edificios, key:'edificio'}, {name:'Pisos', data:pisos, key:'piso'}, {name:'Sectores', data:sectores, key:'sector'}, {name:'Ubicaciones', data:ubicaciones, key:'ubicacion'}, {name:'Activos', data:activos, key:'activo'}, {name:'Operarios', data:usuarios, key:'usuario'}]">
-    <h3>{{item.name}}</h3>
-    <table class="tabla-gestion">
-      <thead>
-        <tr><th>ID</th><th>Nombre</th><th>Acciones</th></tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let d of item.data">
-          <td>{{d.id}}</td>
-          <td>
-            <input [(ngModel)]="d.Nombre" />
-          </td>
-          <td>
-            <button (click)="update(d, item.key)">Guardar</button>
-            <button (click)="remove(d.id, item.key)">Borrar</button>
-          </td>
-        </tr>
-        <tr>
-          <td><input #newId /></td>
-          <td><input #newNombre /></td>
-          <td><button (click)="add({id:newId.value, Nombre:newNombre.value}, item.key); newId.value=''; newNombre.value='';">Agregar</button></td>
-        </tr>
-      </tbody>
-    </table>
+<body>
+  <div class="container">
+    <nav class="sidebar">
+      <ul class="ULestilo">
+        <li class="FlexLista"><a href="/ot"><img class="imgIcono" src="https://frsc.cvg.utn.edu.ar/theme/image.php/snap/theme/1741635814/img/logo" alt=""></a></li>
+        <li class="FlexLista dropdown">
+          <a href="/ot" class="txtNav txtNavOt dropbtn" *ngIf="isAdmin">Orden de Trabajo</a>
+        </li>
+        <li class="FlexLista">
+          <a class="txtNav" href="/historial">Historial</a>
+        </li>
+        <li class="FlexLista">
+          <a class="txtNav" href="/gestion">Gestión</a>
+        </li>
+        <li class="FlexLista">
+          <a class="txtNav txtSalir" href="/login" (click)="logout()">Cerrar sesión</a>
+        </li>
+      </ul>
+    </nav>
+    <main class="content">
+      <div class="gestion-container">
+        <h2>Gestión</h2>
+        <div class="seccion" *ngFor="let item of sections">
+          <h3 class="accordion" (click)="toggle(item)">{{item.name}}</h3>
+          <div *ngIf="item.open">
+            <table class="tabla-gestion">
+              <thead>
+                <tr><th>ID</th><th>Nombre</th><th>Acciones</th></tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let d of item.data">
+                  <td>{{d.id}}</td>
+                  <td><input [(ngModel)]="d.Nombre" /></td>
+                  <td>
+                    <button (click)="update(d, item.key)">Guardar</button>
+                    <button (click)="remove(d.id, item.key)">Borrar</button>
+                  </td>
+                </tr>
+                <tr>
+                  <td><input #newId /></td>
+                  <td><input #newNombre /></td>
+                  <td><button (click)="add({id:newId.value, Nombre:newNombre.value}, item.key); newId.value=''; newNombre.value='';">Agregar</button></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </main>
   </div>
-</div>
+</body>
