--- a/frontEnd/src/app/components/historial/historial.component.html
+++ b/frontEnd/src/app/components/historial/historial.component.html
@@ -12,6 +12,11 @@
               Historial
             </a>
           </li>
+          <li class="FlexLista">
+            <a  class="txtNav " href="/gestion">
+              Gestión
+            </a>
+          </li>
         </ul>
         <div class="divFilter">
             <label class="LabelFilter" for="">Edificio</label>
