--- a/frontEnd/src/app/components/orden-trabajo/orden-trabajo.component.html
+++ b/frontEnd/src/app/components/orden-trabajo/orden-trabajo.component.html
@@ -24,6 +24,11 @@
           </a>
         </li>
         <li class="FlexLista">
+          <a class="txtNav " href="/gestion">
+            Gestión
+          </a>
+        </li>
+        <li class="FlexLista">
           <a class="txtNav txtSalir" href="/ot" (click)="logout()">
             Cerrar sesión
           </a>
