--- a/frontEnd/src/app/components/entorno/entorno.component.html
+++ b/frontEnd/src/app/components/entorno/entorno.component.html
@@ -25,7 +25,7 @@
           </li>
           <li class="FlexLista">
             <a  class="txtNav " href="/gestion">
-              Gestion
+              Gestión
             </a>
           </li>
           <li class="FlexLista">
